<resources>
    <string name="app_name">MinecraftMods</string>

    <string name="main">Main</string>
    <string name="app_loading_text">developed\nby aloe</string>
    <string name="something_went_wrong">Something went wrong</string>

    <string name="addons">Addons</string>
    <string name="maps">Maps</string>
    <string name="textures">Textures</string>
    <string name="seeds">Seeds</string>
    <string name="buildings">Buildings</string>
    <string name="skins">Skins</string>

    <string name="by_default">By default</string>
    <string name="by_likes">By likes</string>
    <string name="by_downloads">By downloads</string>
    <string name="by_date">By date</string>

    <string name="no_internet_connection">Internet connection missing</string>
    <string name="no_internet_connection_text">Internet connection required for app</string>

    //Categories
    <string name="addons_0">Furniture &amp; Decoration</string>
    <string name="addons_1">Car</string>
    <string name="addons_2">Vehicles</string>
    <string name="addons_3">Mobs</string>
    <string name="addons_4">BOSS</string>
    <string name="addons_5">Guns &amp; Armor</string>
    <string name="addons_6">Portal &amp; TNT &amp; LukyBlock</string>
    <string name="addons_7">Superhero &amp; hero</string>
    <string name="addons_8">Other</string>

    <string name="maps_0">Adventure</string>
    <string name="maps_1">Creation</string>
    <string name="maps_2">Custom Terrain</string>
    <string name="maps_3">Minigame</string>
    <string name="maps_4">Parkour</string>
    <string name="maps_5">PVP</string>
    <string name="maps_6">Redstone</string>
    <string name="maps_7">Survival</string>

    <string name="textures_0">16x16</string>
    <string name="textures_1">32x32</string>
    <string name="textures_2">64x64</string>

    <string name="seeds_0">Village</string>
    <string name="seeds_1">Landscape</string>
    <string name="seeds_2">Island</string>
    <string name="seeds_3">Constructions</string>
    <string name="seeds_4">Other</string>

    <string name="buildings_0">Middle Ages</string>
    <string name="buildings_1">Castles</string>
    <string name="buildings_2">Modern</string>
    <string name="buildings_3">Modern+</string>
    <string name="buildings_4">Mechanism</string>
    <string name="buildings_5">Ships</string>
    <string name="buildings_6">Spaceships</string>
    <string name="buildings_7">Flying ships</string>
    <string name="buildings_8">Other</string>
    <string name="buildings_9">SkyWars</string>
    <string name="buildings_10">Redstone</string>

    <string name="skins_0">Monsters</string>
    <string name="skins_1">Girls</string>
    <string name="skins_2">Boys</string>
    <string name="skins_3">Characters</string>
    <string name="skins_4">Heroes</string>
    <string name="skins_5">Games</string>
    <string name="skins_6">Animals</string>
    <string name="skins_7">Military</string>
    <string name="skins_8">Robots</string>
    <string name="skins_9">Camouflage</string>
    <string name="skins_10">Anime</string>
    <string name="skins_11">Other</string>

    <string name="settings">SETTINGS</string>
    <string name="retry">RETRY</string>
    <string name="description">Description</string>
    <string name="ok">OK</string>

    <string name="install_skin_through_gallery_title">Install skin through Gallery</string>
    <string name="install_skin_through_gallery_body">Minecraft version is not supported. Install skin through Gallery and put it in game</string>
    <string name="permission_one_title">Permission required</string>
    <string name="permission_one_body">Access to memory required for file downloading. Grant permission?</string>
    <string name="permission_two_body">Access to memory should be granted in phone settings for file downloading. Open settings?</string>
    <string name="no">NO</string>
    <string name="provide">PERMIT</string>
    <string name="minecraft_isnt_installed_title">Minecraft is not installed</string>
    <string name="minecraft_isnt_installed_body">Install Minecraft?</string>
    <string name="install">INSTALL</string>
    <string name="favorite">Favorite</string>
    <string name="search">Search</string>
    <string name="enter_your_birthdate">Insert your birthdate</string>
    <string name="help">Help</string>

    <string name="instructions_for_addons_and_textures">Instruction for addons and textures installation</string>
    <string name="instruction_addon_one">1. Download addon or texture</string>
    <string name="instruction_addon_two">2. Install addon or texture</string>
    <string name="instruction_addon_three">3. Edit your world</string>
    <string name="instruction_addon_four">4. Choose \"Resource packs\". Add downloaded addon by pressing the button \"Activate\". Repeat these actions by choosing \"Behavior packs\".</string>

    <string name="instructions_for_maps_and_seeds">Instruction for maps and seeds installation</string>
    <string name="instruction_maps_one">1. \"External storage\" should be chosen in settings for maps downloading.</string>
    <string name="instruction_maps_two">2. Download map or seed</string>
    <string name="instruction_maps_three">3. Install map or seed</string>
    <string name="instruction_maps_four">4. Map will be available in section \"Worlds\"</string>

    <string name="instructions_for_skins">Instruction for skins installation</string>
    <string name="instruction_skins_one">1. Choose where skin should be saved</string>
    <string name="instruction_skins_two">2. Install skin</string>
    <string name="instruction_skins_three">3. Install skin in game</string>

    <string name="voice_recognition_error_title">Voice input error</string>
    <string name="voice_recognition_error_body">Sorry, voice input is not supported on your device</string>

    <string name="confirm">Confirm</string>
    <string name="click_confirm">By clicking \"CONFIRM\" you accept</string>
    <string name="privacy_policy"><u>Privacy policy</u></string>
    <string name="welcome">Welcome!</string>
    <string name="enter_age">Put your age</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="you_should_select_at_least_one_category">You should select at least one category</string>
    <string name="file_size_max">File size max</string>
    <string name="file_size_min">File size min</string>
    <string name="date">Date</string>
    <string name="likes">Likes</string>
    <string name="downloads">Downloads</string>
</resources>