<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/sort_default"
            android:orderInCategory="1"
            android:title="@string/by_default"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/sort_likes"
            android:orderInCategory="2"
            android:title="@string/by_likes"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/sort_installs"
            android:orderInCategory="3"
            android:title="@string/by_downloads"
            app:showAsAction="ifRoom" />

        <item
            android:id="@+id/sort_date"
            android:orderInCategory="4"
            android:title="@string/by_date"
            app:showAsAction="ifRoom" />
    </group>

</menu>