<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.iwelogic.minecraft.mods.ui.base_details.permission.PermissionViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/double_default_size">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/double_default_size"
            tools:ignore="UselessParent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/permission_one_title"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/half_default_size"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/permission_one_body"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_size"
                android:gravity="end"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/default_size"
                    android:background="?attr/actionBarItemBackground"
                    android:fontFamily="@font/roboto_medium"
                    android:onClick="@{() -> viewModel.onClickClose()}"
                    android:padding="@dimen/half_default_size"
                    android:text="@string/no"
                    android:textColor="@color/main"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/provide"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/actionBarItemBackground"
                    android:fontFamily="@font/roboto_medium"
                    android:padding="@dimen/half_default_size"
                    android:text="@string/provide"
                    android:textColor="@color/main"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </FrameLayout>
</layout>
