<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="com.iwelogic.minecraft.mods.models.Category" />

        <variable
            name="viewModel"
            type="com.iwelogic.minecraft.mods.ui.search.SearchViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar"
            android:background="@drawable/background_bottom_line"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/toolbar"
                android:layout_height="@dimen/toolbar"
                android:background="?attr/actionBarItemBackground"
                android:onClick="@{() -> viewModel.onClickClose()}"
                android:scaleType="centerInside"
                android:src="@drawable/back" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search"
                query="@{viewModel.query}"
                queryTextListener="@{viewModel.listener}"
                android:layout_width="0dp"
                android:layout_height="32dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:theme="@style/SearchStyle"
                app:defaultQueryHint="@string/search"
                app:iconifiedByDefault="false"
                app:queryBackground="@color/transparent"
                app:queryHint="@string/search"
                app:searchIcon="@null" />

            <ImageView
                android:layout_width="@dimen/toolbar"
                android:layout_height="@dimen/toolbar"
                android:background="?attr/actionBarItemBackground"
                android:onClick="@{() -> viewModel.onClickMic()}"
                android:scaleType="centerInside"
                android:src="@drawable/mic"
                app:tint="@color/darkIcons" />

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/quarter_default_size">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/double_default_size"
                    android:layout_margin="@dimen/quarter_default_size"
                    android:background="@{viewModel.category.equals(Category.ADDONS) ? @drawable/background_chips_on : @drawable/background_chips_off}"
                    android:drawablePadding="@dimen/half_default_size"
                    android:fontFamily="@font/minecraft_regular"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onSelectCategory(Category.ADDONS)}"
                    android:paddingStart="12dp"
                    android:paddingTop="@dimen/quarter_default_size"
                    android:paddingEnd="12dp"
                    android:paddingBottom="@dimen/quarter_default_size"
                    android:text="@string/addons"
                    android:textColor="@{viewModel.category.equals(Category.ADDONS) ? @color/white : @color/black}"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/double_default_size"
                    android:layout_margin="@dimen/quarter_default_size"
                    android:background="@{viewModel.category.equals(Category.MAPS) ? @drawable/background_chips_on : @drawable/background_chips_off}"
                    android:drawablePadding="@dimen/half_default_size"
                    android:fontFamily="@font/minecraft_regular"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onSelectCategory(Category.MAPS)}"
                    android:paddingStart="12dp"
                    android:paddingTop="@dimen/quarter_default_size"
                    android:paddingEnd="12dp"
                    android:paddingBottom="@dimen/quarter_default_size"
                    android:text="@string/maps"
                    android:textColor="@{viewModel.category.equals(Category.MAPS) ? @color/white : @color/black}"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/double_default_size"
                    android:layout_margin="@dimen/quarter_default_size"
                    android:background="@{viewModel.category.equals(Category.TEXTURES) ? @drawable/background_chips_on : @drawable/background_chips_off}"
                    android:drawablePadding="@dimen/half_default_size"
                    android:fontFamily="@font/minecraft_regular"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onSelectCategory(Category.TEXTURES)}"
                    android:paddingStart="12dp"
                    android:paddingTop="@dimen/quarter_default_size"
                    android:paddingEnd="12dp"
                    android:paddingBottom="@dimen/quarter_default_size"
                    android:text="@string/textures"
                    android:textColor="@{viewModel.category.equals(Category.TEXTURES) ? @color/white : @color/black}"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/double_default_size"
                    android:layout_margin="@dimen/quarter_default_size"
                    android:background="@{viewModel.category.equals(Category.SEEDS) ? @drawable/background_chips_on : @drawable/background_chips_off}"
                    android:drawablePadding="@dimen/half_default_size"
                    android:fontFamily="@font/minecraft_regular"
                    android:gravity="center"
                    android:onClick="@{() -> viewModel.onSelectCategory(Category.SEEDS)}"
                    android:paddingStart="12dp"
                    android:paddingTop="@dimen/quarter_default_size"
                    android:paddingEnd="12dp"
                    android:paddingBottom="@dimen/quarter_default_size"
                    android:text="@string/seeds"
                    android:textColor="@{viewModel.category.equals(Category.SEEDS) ? @color/white : @color/black}"
                    android:textSize="16sp" />


            </LinearLayout>

        </HorizontalScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/list"
                mods="@{viewModel.mods}"
                onClick="@{viewModel.onClick}"
                onScroll="@{viewModel.onScroll}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="@{1}" />

            <include
                layout="@layout/layout_progress"
                app:progress="@{viewModel.progress}" />

            <include
                layout="@layout/layout_error"
                app:viewModel="@{viewModel.getBase()}" />

        </FrameLayout>

    </LinearLayout>

</layout>